--- a/01 - JavaScript Drum Kit/style.css
+++ b/01 - JavaScript Drum Kit/style.css
@@ -48,3 +48,11 @@ kbd {
   letter-spacing: .1rem;
   color: #ffc600;
 }
+
+<script>
+  window.addEventListener('keydown', function(e) {
+    const audio = document.querySelector('audio[data-key="${e.keyCode}"]');
+    console.log(audio);
+  });
+  }
+</script>
