--- a/11 - Custom Video Player/style.css
+++ b/11 - Custom Video Player/style.css
@@ -28,13 +28,18 @@ body {
 
 /* This css is only applied when fullscreen is active. */
 .player:fullscreen {
-  max-width: none;
-  width: 100%;
+  min-width: 100%;
+  max-width: 100%
+}
+
+.player:-moz-full-screen {
+  min-width: 100%;
+  max-width: 100%
 }
 
 .player:-webkit-full-screen {
-  max-width: none;
-  width: 100%;
+  min-width: 100%;
+  max-width: 100%
 }
 
 .player__video {
